--- a/index.html
+++ b/index.html
@@ -1,153 +1,44 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-    <head>
-      <link rel="stylesheet" type="text/css" href="landing_page.css" />
-    </head>
+<!doctype html>
 
-    <body>
-      <header>
-        <div class="search">
-          <input type="text" placeholder="Search.." />
-        </div>
-        <div class="create-case">
-          <button class="create" href="#">Create Account</button>
-        </div>
-        <div class="sign-in-case">
-          <button class="sign-in" href="#">Sign In</button>
-        </div>
-      </header>
-      <div>
-        <!-- head img -->
-        <div>
-          <img src="#" />
-        </div>
-        <!-- discover/trending -->
-        <div class="discover-trending">
-          <!-- discover -->
-          <div class="discover">Discover</div>
-          <!-- trending -->
-          <div class="trending">Trending</div>
-        </div>
-        <!-- boxes group -->
-        <div class="bigbox1">
-          <!-- box 1 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/abstract.jpg" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Abstract</p>
-            </div>
-          </div>
-          <!-- box 2 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/woman.png" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Woman</p>
-            </div>
-          </div>
-          <!-- box 3 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/welcome_to_the_city.png" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Welcome to the City</p>
-            </div>
-          </div>
-          <!-- box 4 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/rise_homes.png" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Rise Homes</p>
-            </div>
-          </div>
-          <!-- box 5 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/youve_got_mail.jpg" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>You've Got Mail</p>
-            </div>
-          </div>
-        </div>
-        <div class="bigbox2">
-          <!-- box 6 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/mistakes.jpg" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Mistakes</p>
-            </div>
-          </div>
-          <!-- box 7 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/ball_and_man.jpg" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Ball and Man</p>
-            </div>
-          </div>
-          <!-- box 8 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/roboto.png" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Roboto</p>
-            </div>
-          </div>
-          <!-- box 9 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/sunsets.jpg" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Sunseto</p>
-            </div>
-          </div>
-          <!-- box 10 -->
-          <div class="img-block">
-            <!-- img -->
-            <div>
-              <img src="pics/ideas.png" href="#" />
-            </div>
-            <!-- info -->
-            <div>
-              <p>Ideas</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </body>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ARP</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
+
+
+</head>
+</div>
+
+
+
+<nav class= "topNav">
+  <div class="rectangle1">
+    <input type="text" placeholder="Search">
+  </div>
+  <div class="rectangle42">
+    <button class="createAccount">Create Account</button>
+  </div>
+  <div class="rectangle2">
+    <p class = "arp">ARP</p>
+  </div>
+  <div class="rectangle41">
+    <button class="signIn">Sign In</button>
+   </div>
+</nav>
+
+<img class = "rectangle68" src=""><p class = "headerText">Showcase. Upload. Discover. Share.</p></img>
+</header>
+
+<body>
+  <div class = "center">
+    <p class = "discover">Discover</p>
+    <p class = "trending">Trending</p>
+  </div>
+</body>
+
 </html>
+
