added icons, style updates

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
+
     <head>
       <link rel="stylesheet" type="text/css" href="landing_page.css" />
     </head>
@@ -23,7 +24,7 @@
       <div>
         <!-- head img -->
         <div>
-          <img src="#" />
+          <img src="pics/Banner.jpg" />
         </div>
         <!-- discover/trending -->
         <div class="discover-trending">
@@ -38,55 +39,88 @@
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/abstract.jpg" href="#" />
+              <img src="pics/abstract.jpg" href="#" class="img-block-img" />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Abstract</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
           <!-- box 2 -->
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/woman.png" href="#" />
+              <img src="pics/woman.png" href="#" class="img-block-img" />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Woman</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
           <!-- box 3 -->
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/welcome_to_the_city.png" href="#" />
+              <img
+                src="pics/welcome_to_the_city.png"
+                href="#"
+                class="img-block-img"
+              />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Welcome to the City</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
           <!-- box 4 -->
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/rise_homes.png" href="#" />
+              <img src="pics/rise_homes.png" href="#" class="img-block-img" />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Rise Homes</p>
+              <p>by Jon Vinyl</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
           <!-- box 5 -->
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/youve_got_mail.jpg" href="#" />
+              <img
+                src="pics/youve_got_mail.jpg"
+                href="#"
+                class="img-block-img"
+              />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>You've Got Mail</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
         </div>
@@ -95,55 +129,80 @@
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/mistakes.jpg" href="#" />
+              <img src="pics/mistakes.jpg" href="#" class="img-block-img" />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Mistakes</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
           <!-- box 7 -->
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/ball_and_man.jpg" href="#" />
+              <img src="pics/ball_and_man.jpg" href="#" class="img-block-img" />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Ball and Man</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
           <!-- box 8 -->
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/roboto.png" href="#" />
+              <img src="pics/roboto.png" href="#" class="img-block-img" />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Roboto</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
           <!-- box 9 -->
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/sunsets.jpg" href="#" />
+              <img src="pics/sunsets.jpg" href="#" class="img-block-img" />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Sunseto</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
           <!-- box 10 -->
           <div class="img-block">
             <!-- img -->
             <div>
-              <img src="pics/ideas.png" href="#" />
+              <img src="pics/ideas.png" href="#" class="img-block-img" />
             </div>
             <!-- info -->
-            <div>
+            <div class="box-relate">
               <p>Ideas</p>
+              <p>by JP Eliares</p>
+              <p>
+                <img src="pics/mask.png" /> 94
+                <img src="pics/vector.png" /> 1002
+              </p>
             </div>
           </div>
         </div>
