--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <head>
       <link rel="stylesheet" type="text/css" href="landing_page.css" />
+      <link
+        href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap"
+        rel="stylesheet"
+      />
     </head>
 
     <body>
