ready for last critiques

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     <body>
       <header>
+        <div class="sig">
+          AR<br />
+          P.
+        </div>
         <div class="search">
           <input type="text" placeholder="Search.." />
         </div>
