button functional, icon sizes adjusted

--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
           <input type="text" placeholder="Search.." />
         </div>
         <div class="create-case">
-          <button class="create" href="#">Create Account</button>
+          <button class="create" type="button" onclick="location.href='#';">
+            Create Account
+          </button>
         </div>
         <div class="sign-in-case">
-          <button class="sign-in" href="#">Sign In</button>
+          <button
+            class="sign-in"
+            type="button"
+            onclick="location.href='https://build-week-art-portfolio.netlify.com/';"
+          >
+            Sign In
+          </button>
         </div>
       </header>
       <div>
