--- a/index.html
+++ b/index.html
@@ -19,25 +19,178 @@
   <div class="rectangle1">
     <input type="text" placeholder="Search">
   </div>
-  <div class="rectangle42">
-    <button class="createAccount">Create Account</button>
-  </div>
-  <div class="rectangle2">
+  
+  <div class="logo">
     <p class = "arp">ARP</p>
   </div>
-  <div class="rectangle41">
-    <button class="signIn">Sign In</button>
-   </div>
+  <!-- top buttons -->
+  <div class="spacing">
+    <div class="signInButton">
+      <button class="signIn">Sign In</button>
+    </div>
+    <div class="accountButton">
+      <button class="createAccount">Create Account</button>
+    </div>
+  </div>
 </nav>
 
-<img class = "rectangle68" src=""><p class = "headerText">Showcase. Upload. Discover. Share.</p></img>
+<img class = "headerImage" src="https://i.ibb.co/qNtsdJH/Group-8.png">
 </header>
 
 <body>
   <div class = "center">
-    <p class = "discover">Discover</p>
-    <p class = "trending">Trending</p>
+    <a href=" " class = "discover">Discover</a>
+    <a href=" " class = "trending">Trending</a>
   </div>
+
+  <div class="topRow">
+  <!-- first image -->
+  <div class="">
+    <img src="https://i.ibb.co/Bnb84Yr/Rectangle-7.png" class="imageOne">
+    <div class="rectangle88">
+      <p class="title">Abstract</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">79</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+    <div class="mask"></div>
+  </div>
+  
+  <!-- second image -->
+  <div class="">
+    <img src="https://i.ibb.co/BHkgjzX/Rectangle-56.png" class="imageTwo">
+    <div class="rectangle88">
+      <p class="title">Woman</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">81</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+    <div class="mask"></div>
+  </div>
+  <!-- third image -->
+  <div class="">
+    <img src="https://i.ibb.co/FmbLNGg/Rectangle-57.png" class="imageThree">
+    <div class="rectangle88">
+      <p class="title">Welcome</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">68</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+    <div class="mask"></div>
+  </div>
+  <!-- fourth image -->
+  <div class="">
+    <img src="https://i.ibb.co/xm37SXt/Rectangle-58.png" class="imageFour">
+    <div class="rectangle88">
+      <p class="title">Homes</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">79</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+    <div class="mask"></div>
+  </div>
+  <!-- fifth image -->
+  <div class="">
+    <img src="https://i.ibb.co/c38D9t3/Rectangle-59.png" class="imageFive">
+    <div class="rectangle88">
+      <p class="title">GotMail</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">88</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+  </div>
+</div>
+
+
+<div class="bottomRow">
+  <!-- sixth image -->
+    <div class="">
+        <img src="https://i.ibb.co/7YgWRm5/Rectangle-7-2.png" class="imageSix">
+        <div class="rectangle88">
+          <p class="title">Mistakes</p>
+          <p class="eliares">by JP Eliares</p>
+  
+  
+  <p class="ninetyfour">94</p>
+  <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>        <div class="blackLine"></div>
+        </div>
+        <div class="mask"></div>
+      </div>
+  <!-- seventh image -->
+  <div class="">
+    <img src="https://i.ibb.co/qDLQxJW/Rectangle-56-2.png" class="imageSeven">
+    <div class="rectangle88">
+      <p class="title">Ball</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">48</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+    <div class="mask"></div>
+  </div>
+  <!-- eight image -->
+  <div class="">
+    <img src="https://i.ibb.co/64fwJPM/Rectangle-57-2.png" class="imageEight">
+    <div class="rectangle88">
+      <p class="title">Roboto</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">77</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+    <div class="mask"></div>
+  </div>
+    <!-- nine image -->
+  <div class="">
+    <img src="https://i.ibb.co/h1hr30v/Rectangle-60.png" class="imageNine">
+    <div class="rectangle88">
+      <p class="title">Sunset</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">69</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+    <div class="mask"></div>
+  </div>
+  <!-- ten image -->
+  <div class="">
+    <img src="https://i.ibb.co/6m5v3ys/Rectangle-59-2.png" class="imageTen">
+    <div class="rectangle88">
+      <p class="title">Ideas</p>
+      <p class="eliares">by JP Eliares</p>
+      <div class="blackLine"></div>
+      <p class="ninetyfour">90</p>
+      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" class="heart" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.5 15L6.4125 13.921C2.55 10.1035 0 7.58583 0 4.49591C0 1.9782 1.815 0 4.125 0C5.43 0 6.6825 0.662125 7.5 1.70845C8.3175 0.662125 9.57 0 10.875 0C13.185 0 15 1.9782 15 4.49591C15 7.58583 12.45 10.1035 8.5875 13.9292L7.5 15Z" fill="#707070"/>
+        </svg>
+    </div>
+    <div class="mask"></div>
+  </div>
+</div>
+
 </body>
 
 </html>
